# StockAI

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
data/: README.md
src/stockai/: __init__.py
src/stockai/analysis/: README.md  __init__.py
src/stockai/collection/: README.md  __init__.py
src/stockai/intelligence/: README.md  __init__.py
src/stockai/jobs/: README.md  __init__.py
src/stockai/presentation/: README.md  __init__.py
src/stockai/storage/: README.md  __init__.py
tests/fixtures/: README.md
tests/integration/: README.md
tests/unit/: README.md  test_package_import.py
