[project]
name = "stockai"
version = "0.1.0"
description = "AI research platform for explainable market intelligence"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]
